# FlOpEdt

./: .dockerignore  .gitignore  .gitlab-ci.yml  AUTHORS  AUTHORS.md  CHANGELOG.md  Dockerfile  Dockerfile-Vue  MANIFEST.in  Makefile  README.md  docker-compose.development.yml  docker-compose.production.yml  dump.json.bz2  dump_anonyme.json.bz2  requirements.txt  setup.cfg
.gitlab/ci/: backend-ci.yml  build-ci.yml  webapp-ci.yml
.gitlab/merge_request_templates/: Merge_Request_en.md  Merge_Request_fr.md
FlOpEDT/: .pylintrc  admin.py  apps.py  cProfile-solve.sh  data_test_constraints.json  data_test_constraints_SimultaneousCourses.json  data_test_constraints_with_constraints.json  manage.py  pyproject.toml  pytest-ci.ini  pytest.ini  setup.cfg  solve.py  test_db.py
FlOpEDT-front/: .env.development  .eslintrc  .eslintrc.js  .gitignore  .prettierrc.json  README.md  env.d.ts  histoire.config.ts  index.html  leftover.package.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
FlOpEDT-front/src/: App.vue  histoire.setup.ts  main.ts  style.css
FlOpEDT/FlOpEDT/: __init__.py  asgi.py  backend.py  converters.py  routing.py  urls.py  wsgi.py
FlOpEDT/MyFlOp/: Export_Salles_utf8.csv  MyTTModel.py  MyTTUtils.py  MyTimetableModel.py  MyTimetableUtils.py  __init__.py  ade_reservations.py  apps.py  colors.py  custom_constraints.py  models.py  tests.py
FlOpEDT/TTapp/: FlopConstraint.py  FlopModel.py  TTModel.py  (+23 more)
audit/: README.md  audit.md  listing-setup.tex
config_file/: flopedt-ci.ini  flopedt-docker.ini  flopedt-system.ini  flopedt.ini
(+725 files in other folders)
