[metadata]
name = FlOpEDT
version = 0.5.6
author = Pablo Seban
author_email = pablo.seban@univ-tlse2.fr
description = flop!EDT
long_description = Version 0.5.6 de flop!EDT, gestionnaire coopératif de plannings et emploi du temps
keywords = emploi, du, temps
license = AGPLv3
classifiers = 
	Framework :: Django
	Programming Language :: Python :: 3

[options]
zip_safe = False
package_dir =
	= FlOpEDT
packages = find_namespace:
include_package_data = True
py_modules = apps, admin, solve
python_requires = >=3.11
install_requires = 
	Django==4.2
	django_redis
	django-import-export
	django-extensions
	django-colorfield
	PuLP
	psycopg[binary]
	requests
	numpy
	pyclustering
	asgiref
	daphne
	channels-redis
	channels
	python-memcached
	django-ical
	ipython
	openpyxl
	djangorestframework
	djangorestframework-csv
	dj-rest-auth
	Markdown
	django-debug-toolbar
	zeep
	tdqm
	django-debug-toolbar-request-history
	django-filter
	drf-spectacular
	django-cors-headers
	pyprof2calltree
	django-crontab
	python-dateutil
	pytest
	pytest-django
	rules

[options.packages.find]
where = FlOpEDT

[options.entry_points]
console_scripts = 
	flop_admin = FlOpEDT:django_manage
